// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditResultErrorMessage should call getRuleList when rule name is not empty 1`] = `
<body>
  <div />
</body>
`;

exports[`AuditResultErrorMessage should call getRuleList when rule name is not empty 2`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-vertical audit-result-error-message-wrapper"
    >
      <div
        class="ant-space-item"
        style="margin-bottom: 5px;"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-col"
            style="flex: 0 0 50px; min-width: 0;"
          >
            <div
              class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 1px;"
              >
                <div>
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle"
                    role="img"
                    style="font-size: 25px; color: rgb(240, 0, 0);"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography ant-typography-secondary"
                >
                  error
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-col message"
            style="flex: 1 1 auto; min-width: 0;"
          >
            <span>
              schema 不存在
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-bottom: 5px;"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-col"
            style="flex: 0 0 50px; min-width: 0;"
          >
            <div
              class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 1px;"
              >
                <div>
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle"
                    role="img"
                    style="font-size: 25px; color: rgb(240, 0, 0);"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography ant-typography-secondary"
                >
                  error
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-col message"
            style="flex: 1 1 auto; min-width: 0;"
          >
            <span>
              禁止使用没有where条件的sql语句或者使用where 1=1等变相没有条件的sql
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-col"
            style="flex: 0 0 50px; min-width: 0;"
          >
            <div
              class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
            >
              <div
                class="ant-space-item"
                style="margin-bottom: 1px;"
              >
                <div>
                  <span
                    aria-label="warning"
                    class="anticon anticon-warning"
                    role="img"
                    style="font-size: 25px; color: rgb(255, 140, 0);"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="warning"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography ant-typography-secondary"
                >
                  warn
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-col message"
            style="flex: 1 1 auto; min-width: 0;"
          >
            <span>
              select 语句必须带limit,且限制数不得超过1000
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AuditResultErrorMessage should render normal level when not match level 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical audit-result-error-message-wrapper"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-row ant-row-no-wrap"
      >
        <div
          class="ant-col"
          style="flex: 0 0 50px; min-width: 0;"
        >
          <div
            class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 1px;"
            >
              <div>
                <span
                  aria-label="audit"
                  class="anticon anticon-audit"
                  role="img"
                  style="font-size: 25px;"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="audit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                normal
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-col message"
          style="flex: 1 1 auto; min-width: 0;"
        >
          <span>
            禁止使用没有where条件的sql语句或者使用where 1=1等变相没有条件的sql
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
